# openscad-web-generator

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  CLAUDE.md  PROMPT.md  PROMPT_RUN_1.md  PROMPT_RUN_2.md  PROMPT_RUN_3.md  PROMPT_RUN_4.md  README.md  SCAD_FORMAT.md  TASKLIST.md  TASKLIST_RUN_2.md  TASKLIST_RUN_3.md  add-missing-kiri-params.md  flake.nix  index.html  package-lock.json  package.json  result  slicer-gcode-test-prompt.md  test-gcode-preview.html  vite.config.ts  vitest.integration.config.ts
.claude/: settings.json
.github/workflows/: android-release.yml  build-slicer-wasm.yml  deploy.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/mmmaxwwwell/openscadweb/: MainActivity.java  SlicerBridge.java
android/app/src/main/jni/: CMakeLists.txt  slicer_jni.cpp
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  styles.xml
memory/: multicolor-3mf.md
nix/: RESUME.md  libslic3r-deps.nix  libslic3r-lib.nix  libslic3r-wasm.nix  openscad-wasm.nix  orcaslicer-android.nix  orcaslicer-deps.nix  orcaslicer-lib.nix  orcaslicer-wasm.nix
nix/patches/: fontconfig.patch  glib.patch  lib3mf.patch
public/: THIRD-PARTY-LICENSES.txt  sample-box.scad
public/examples/: big_chapstick.scad  cube_1cm.scad  fi_mini_case.scad  hull_sailboat.scad  stacked_colors.scad
scripts/: build-slicer-wasm.mjs  build-wasm.mjs  build.mjs  bundle-bosl2.mjs  bundle-qr.mjs  copy-android-slicer.sh  download-slicer-wasm.mjs  download-wasm.mjs  profile-slicer.mjs  run-tasks.sh
src/: App.tsx  app.css  main.tsx  test-gcode-preview.tsx  vite-env.d.ts
src/components/: ExportControls.tsx  FilamentManager.tsx  FileManager.tsx  GCodePreview.tsx  ParameterEditor.tsx  ParameterSetSelector.tsx  PreviewPanel.tsx  PrintDialog.tsx  PrinterSettings.tsx  SendToPrinter.tsx  SendToPrinterButton.tsx  Toast.tsx
src/components/__tests__/: AdhesionTab.test.tsx  AdvancedTab.test.tsx  CoolingTab.test.tsx  InfillTab.test.tsx  QualityTab.test.tsx  RetractionTab.test.tsx  SpeedTab.test.tsx  SupportTab.test.tsx  WallsTab.test.tsx  filament-settings.test.tsx
src/components/print-settings/: AdhesionTab.tsx  AdvancedTab.tsx  CoolingTab.tsx  InfillTab.tsx  QualityTab.tsx  RetractionTab.tsx  SpeedTab.tsx  SupportTab.tsx  WallsTab.tsx  index.ts
src/data/: printer-profiles.ts
src/hooks/: useExtruderFilaments.ts  useFilaments.ts  useOpenSCAD.ts  usePrinterConfig.ts  usePrinterFilamentOverrides.ts  usePrinters.ts  useScadParser.ts  useSlicer.ts  useStorage.ts
src/lib/: color-utils.ts  gcode-parser.ts  kiri-engine.ts  merge-3mf.ts  moonraker-api.ts  native-slicer-backend.ts  notification-sound.ts  openscad-api.ts  openscad-worker.ts  orca-slicer-settings.ts  render-cache.ts  scad-parser.ts  slicer-backend.ts  slicer-engine.ts  slicer-settings.ts  storage-browser.ts  storage-s3.ts  storage.ts
src/lib/__tests__/: config-key-registry.test.ts  gcode-parser.test.ts  merge-3mf-roundtrip.test.ts  merge-3mf.test.ts  moonraker-api.test.ts  notification-sound.test.ts  openscad-api.test.ts  orca-slicer-settings.test.ts  parse-color-string.test.ts  parse-gcode-stats.test.ts  print-profile-completeness.test.ts  printer-profiles.test.ts  render-cache.test.ts  scad-parser.test.ts  slicer-e2e-pipeline.test.ts  slicer-engine.test.ts  slicer-fan-control.test.ts  slicer-gcode-fan.integration.test.ts  slicer-settings.test.ts  stacked-multicolor.test.ts  storage-browser.test.ts  storage.test.ts
src/types/: index.ts  print-profile.ts
src/wasm/: CMakeLists.txt  slicer_bindings.cpp
src/workers/: gcode-preview-worker.ts  kiri-minion.js  kiri-worker.js  slicer-worker.ts
tests/: fi-mini-multicolor-e2e.mjs  fi-mini-slice-e2e.mjs  slice-cube-e2e.md  slice-cube-e2e.mjs  slice-pipeline-e2e.mjs
